<resources>
    <string name="app_name">Motivator</string>
    <string name="title_activity_add_type">Add new activity type</string>
    <string name="add_activity_name">Name</string>
    <string name="add_activity_description">Description</string>
    <string name="add_activity_reward">Reward</string>
    <string name="add_activity_button_text">Add</string>
    <string name="zero">0</string>
    <string name="about">About</string>
    <string name="title_activity_main_new">MainActivityNew</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="about_content">Motivator App!\n
Developed by: Amit Itzkovitch\n
Contact Me! amit7itz@gmail.com\n
\n\n
Credits:\n
Trophy icon designed by Freepik from www.flaticon.com\n
Flame icon made by Vectors Market from www.flaticon.com
</string>
    <string name="motivator">Motivator</string>
    <string name="major">Major activity</string>
    <string name="balance">Balance</string>
    <string name="streak">Streak</string>
    <string name="manual_changes">Manual Changes</string>
    <string name="last_activity">Last Activity</string>
    <string name="last_activity_content">You have no activities yet</string>
    <string name="delete_last_activity">Delete Last Activity</string>
    <string name="fix_balance_header">Fix Balance</string>
    <string name="modify">Modify</string>
</resources>
